bloonix-webgui (0.33) released at 2015-XX-XX

    * Modified ES template and force object some keys to type 'string'.

bloonix-webgui (0.32) released at 2015-02-16

    * Improved the database upgrade.
    * Migrate dashboard width from 9 to 12 and height from 6 to 12.
    * Changed the order of dashlet icons and fixed the initial dashlet
      width and height
    * Pattern fixed in init-database.

bloonix-webgui (0.31) released at 2015-02-15

    * Fixed quoting of init-database.

bloonix-webgui (0.30) released at 2015-02-14

    * Scale dashlets on the dashboard to a value related to the content width.
    * Init-database now replaces the pattern @@PASSWORD@@ in the configuration.

bloonix-webgui (0.29) released at 2015-02-12

    * New feature: doWaitForElement can now wait for text within an element too.

bloonix-webgui (0.28) released at 2015-02-12

    * Fixed typo safe -> save.
    * Fixed empty variable handling (agent_options).

bloonix-webgui (0.27) released at 2015-01-26

    * Fixed <br/> in dependency table.
    * Hide nav item "company" if the user is not an admin.
    * Kicked parameter company_id for contact forms.
    * Replaced the raw call /usr/sbin/sendmail with MIME::Lite.

bloonix-webgui (0.26) released at 2015-01-20

    * Installation fixed.

bloonix-webgui (0.25) released at 2015-01-18

    * Added a script and example how to reset the password
      of the user admin

bloonix-webgui (0.24) released at 2015-01-13

    * Make it unpossible to delete user and group with id 1.

bloonix-webgui (0.23) released at 2015-01-13

    * Check value_type in addition to value to determine if a
      check option is just a flag or if the option expects a value.

bloonix-webgui (0.22) released at 2015-01-11

    * Fixed service form and add a remove button to remove
      input fields.

bloonix-webgui (0.21) released at 2015-01-02

    * Added a help doc for user charts.

bloonix-webgui (0.20) released at 2014-12-31

    * Path fix for mtr under CentOS.
